# LLM-apps

Browser-Use/: README.md  main.py  pyproject.toml
CrewAI-Agent/: README.md  pyproject.toml  report.md
CrewAI-Agent/src/news_agent/: crew.py  main.py
RAG/: rag.py  requirements.txt
